dev/k8s/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-world
spec:
  replicas: 3 
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world-pod
        image: 073382713429.dkr.ecr.us-east-1.amazonaws.com/default:latest 
        ports: 
        - containerPort: 80
        resources:
          limits:
            cpu: '250m'
            memory: '128M'
          requests:
            cpu: '250m'
            memory: '128M'
